--- a/server/tutorial/Procfile
+++ b/server/tutorial/Procfile
@@ -1,1 +1,4 @@
-web: gunicorn tutorial.wsgi.py --log-file -
+web: cd server/tutorial
+web: python manage.py runserver
+web: gunicorn --pythonpath="$PWD/server/tutorial" tutorial.wsgi
+heroku ps:scale web=1
