--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ jwt==1.2.0
 nexmo==2.5.2
 phonenumbers==8.12.33
 Pillow==8.3.2
+psycopg2-binary==2.9.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
